# rest-api-client-rust

./: Cargo.toml  README.md
src/: main.rs
